--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
           </div>
 
           <div class="box">
-            <img src="" alt="" />
+            <img src="/login.html.jpg" alt="" />
             <h3>Spacious</h3>
             <p>
               The entire facility is kept spotlessly clean. Eating areas should
