--- a/Menu.html
+++ b/Menu.html
@@ -46,7 +46,7 @@
         <img src="/porata.jpg" class="image" alt="">
         <h3 class="name">Porata</h3>
         <p class="address">Bun/Kothu/Vechi</p>
-        <a href="#" class="btn">send enquiry</a>
+        <a href="#" class="btn">Order</a>
 
       </div>
       <div class="box">
