--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
     <header class="header">
       <section class="flex">
         <a href="search.html" class="logo"
-          ><img src="/BP.png" height="50" alt=""
+          ><img src="/assets/BP.png" height="50" alt=""
         /></a>
 
         <nav class="navbar">
@@ -47,7 +47,7 @@
 
         <div class="grid">
           <div class="box">
-            <img src="/cupcake.jpg" alt="" />
+            <img src="/assets/cupcake.jpg" alt="" />
             <h3>Taste</h3>
             <p>
               Invariably the food is tasty and well prepared. The fare is
@@ -57,7 +57,7 @@
           </div>
 
           <div class="box">
-            <img src="/eating.jpg" alt="" />
+            <img src="/assets/eating.jpg" alt="" />
             <h3>Quality</h3>
             <p>
               Waitrons know their jobs, are efficient and able to advise
@@ -68,7 +68,7 @@
           </div>
 
           <div class="box">
-            <img src="/login.html.jpg" alt="" />
+            <img src="/assets/login.html.jpg" alt="" />
             <h3>Spacious</h3>
             <p>
               The entire facility is kept spotlessly clean. Eating areas should
