--- a/AddOn.html
+++ b/AddOn.html
@@ -34,27 +34,27 @@
       <h1 class="heading"></h1>
       <section class="grid">
         <div class="box">
-          <img src="/salad.jpg" height="360" width="260" alt="" />
+          <img src="/assets/salad.jpg" height="360" width="260" alt="" />
           <h3><span>Salad</span></h3>
         </div>
         <div class="box">
-          <img src="/pasta.jpg" height="360" width="260" alt="" />
+          <img src="/assets/pasta.jpg" height="360" width="260" alt="" />
           <h3><span>Pasta</span></h3>
         </div>
         <div class="box">
-          <img src="/biriyani.jpg" height="360" width="260" alt="" />
+          <img src="/assets/biriyani.jpg" height="360" width="260" alt="" />
           <h3><span>Biriyani</span></h3>
         </div>
         <div class="box">
-          <img src="/grill.jpg" height="360" width="260" alt="" />
+          <img src="/assets/grill.jpg" height="360" width="260" alt="" />
           <h3><span>Grills</span></h3>
         </div>
         <div class="box">
-          <img src="/burger.jpg" height="360" width="260" alt="" />
+          <img src="/assets/burger.jpg" height="360" width="260" alt="" />
           <h3><span>Burger</span></h3>
         </div>
         <div class="box">
-          <img src="/dipSauce.jpg" height="360" width="260" alt="" />
+          <img src="/assets/dipSauce.jpg" height="360" width="260" alt="" />
           <h3><span>Cheesy Dips</span></h3>
         </div>
       </section>
