--- a/Menu.html
+++ b/Menu.html
@@ -35,7 +35,7 @@
     <section class="grid">
       <div class="box">
         <div class="price"><i class="">&#8377</i><span>80</span></div>
-        <img src="/pizza.jpg" class="image" alt="">
+        <img src="/assets/pizza.jpg" class="image" alt="">
         <h3 class="name">Pizza</h3>
         <p class="address">Crusty Cheese</p>
         <a href="#" class="btn">Order</a>
@@ -43,7 +43,7 @@
       </div>
       <div class="box" data-aos="zoom-in" data-aos-delay="400">
         <div class="price"><i class="">&#8377</i><span>75</span></div>
-        <img src="/porata.jpg" class="image" alt="">
+        <img src="/assets/porata.jpg" class="image" alt="">
         <h3 class="name">Porata</h3>
         <p class="address">Bun/Kothu/Vechi</p>
         <a href="#" class="btn">Order</a>
@@ -51,7 +51,7 @@
       </div>
       <div class="box">
         <div class="price"><i class="">&#8377</i><span>99</span></div>
-        <img src="/wrap.jpg" class="image" alt="">
+        <img src="/assets/wrap.jpg" class="image" alt="">
         <h3 class="name">Shawarma</h3>
         <p class="address">Chicken/Veg</p>
         <a href="#" class="btn">Order</a>
@@ -60,7 +60,7 @@
 
       <div class="box">
         <div class="price"><i class="">&#8377</i><span>249</span></div>
-        <img src="/ramen.jpg" class="image" alt="">
+        <img src="/assets/ramen.jpg" class="image" alt="">
         <h3 class="name">Ramen</h3>
         <p class="address">Japanese Special</p>
         <a href="#" class="btn">Order</a>
@@ -68,7 +68,7 @@
       </div>
       <div class="box">
         <div class="price"><i class="">&#8377</i><span>49</span></div>
-        <img src="beverage.jpg" class="image" alt="">
+        <img src="/assets/beverage.jpg" class="image" alt="">
         <h3 class="name">Beverages</h3>
         <p class="address">Cola/Miranda/Pepsi/Water/Tea</p>
         <a href="#" class="btn">Order</a>
@@ -76,7 +76,7 @@
       </div>
       <div class="box">
         <div class="price"><i class="">&#8377</i><span>90</span></div>
-        <img src="momo.jpg" class="image" alt="">
+        <img src="/assets/momo.jpg" class="image" alt="">
         <h3 class="name">Momos</h3>
         <p class="address">Chicken/Mutton/Veg/</p>
         <a href="#" class="btn">Order</a>
