--- a/contact.html
+++ b/contact.html
@@ -77,24 +77,23 @@
           <div class="box">
             <i class="fas fa-phone"></i>
             <h3>phone number</h3>
-            <a href="tel:9876543210">+987-654-3210</a>
-            <a href="tel:9182736450">+919-273-6450</a>
+            <a href="tel:9876543210">+987654321</a>
+            <a href="tel:9182736450">+123456789</a>
           </div>
           <div class="box">
             <i class="fas fa-envelope"></i>
             <h3>email address</h3>
-            <a href="mailto:dearyoutube@gmail.com">dearyoutube@gmail.com</a>
-            <a href="ebinezhebi@gmail.com">ebinezhebi@gmail.com</a>
+            <a href="mailto:hello@gmail.com">Test@gmailcom</a>
+            <a href="hello@gmail.com">Test2@gmail.com</a>
           </div>
           <div class="box">
             <i class="fas fa-map-marker-alt"></i>
             <h3>office address</h3>
-            <a href="#">f-4 8/210 lotus avenue street america </a>
+            <a href="#">Some Address </a>
           </div>
         </div>
         <div class="credit">
-          &copy; copyright @2023 by <span>Ebinezh Mohan</span> | all rights
-          reserved !
+          &copy; copyright @2023 by <span>EbiMon</span> | all rights reserved !
         </div>
       </section>
     </div>
